start-server-dev. Fixes #460

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "dev": "vite --host",
         "start": "npm run start-server",
         "start-server": "node server/server.js",
+        "start-server-dev": "cross-env NODE_ENV=development node server/server.js",
         "build": "vite build",
         "tsc": "tsc",
         "vite-preview-dist": "vite preview --host",
@@ -56,6 +57,7 @@
         "chartjs-adapter-dayjs": "^1.0.0",
         "command-exists": "^1.2.9",
         "compare-versions": "^3.6.0",
+        "cross-env": "^7.0.3",
         "dayjs": "^1.10.7",
         "express": "^4.17.1",
         "express-basic-auth": "^1.2.0",
