Add postcss-rtlcss and postcss-scss

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
         "nodemailer": "^6.6.3",
         "notp": "^2.0.3",
         "password-hash": "^1.2.2",
+        "postcss-rtlcss": "^3.4.1",
+        "postcss-scss": "^4.0.0",
         "prom-client": "^13.2.0",
         "prometheus-api-metrics": "^3.2.0",
         "qrcode": "^1.4.4",
@@ -70,8 +72,8 @@
         "socket.io-client": "^4.2.0",
         "sqlite3": "github:mapbox/node-sqlite3#593c9d",
         "tcp-ping": "^0.1.1",
-        "timezones-list": "^3.0.1",
         "thirty-two": "^1.0.2",
+        "timezones-list": "^3.0.1",
         "v-pagination-3": "^0.1.6",
         "vue": "^3.2.8",
         "vue-chart-3": "^0.5.8",
