WIP: Enable background jobs
WIP: Remove better-sqlite3

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "axios": "~0.21.4",
         "bcryptjs": "~2.4.3",
         "bootstrap": "~5.1.1",
+        "bree": "~6.3.1",
         "chart.js": "~3.5.1",
         "chartjs-adapter-dayjs": "~1.0.0",
         "command-exists": "~1.2.9",
