--- a/.github/workflows/auto-test.yml
+++ b/.github/workflows/auto-test.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x]
+        node-version: [14.x, 15.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -26,9 +26,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-      env: 
-        HEADLESS_TEST: 1
-        
     - run: npm ci
     - run: npm run build
     - run: npm test
+      env:
+        HEADLESS_TEST: 1
