--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "start-server-dev": "cross-env NODE_ENV=development node server/server.js",
         "build": "vite build",
         "test": "node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/ --test",
+        "test-with-build": "npm run build && npm test",
         "jest": "node test/prepare-jest.js && jest",
         "tsc": "tsc",
         "vite-preview-dist": "vite preview --host",
