[test] change to npm install for pull requests

--- a/.github/workflows/auto-test.yml
+++ b/.github/workflows/auto-test.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
+    - run: npm run install-legacy
     - run: npm run build
     - run: npm test
       env:
