--- a/ansible/roles/nginx/templates/docker-compose.yml
+++ b/ansible/roles/nginx/templates/docker-compose.yml
@@ -3,6 +3,6 @@ services:
     nginx:
         network_mode: host
         restart: always
-        image: nginx:1.21.3-alpine
+        image: nginx:stable-alpine
         volumes:
             - '/compose/volumes/nginx/:/etc/nginx/'
