--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
         "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
         "lint:style": "stylelint \"**/*.{vue,css,scss}\" --ignore-path .gitignore",
         "lint": "npm run lint:js && npm run lint:style",
-        "dev": "vite --host",
+        "dev": "vite --host --config ./config/vite.config.js",
         "start": "npm run start-server",
         "start-server": "node server/server.js",
         "start-server-dev": "cross-env NODE_ENV=development node server/server.js",
-        "build": "vite build",
+        "build": "vite build --config ./config/vite.config.js",
         "test": "node test/prepare-test-server.js && node server/server.js --port=3002 --data-dir=./data/test/ --test",
         "test-with-build": "npm run build && npm test",
         "jest": "node test/prepare-jest.js && npm run jest-frontend && jest ",
         "jest-frontend": "cross-env TEST_FRONTEND=1 jest --config=./jest-frontend.config.js",
         "tsc": "tsc",
-        "vite-preview-dist": "vite preview --host",
+        "vite-preview-dist": "vite preview --host --config ./config/vite.config.js",
         "build-docker": "npm run build-docker-debian && npm run build-docker-alpine",
         "build-docker-alpine-base": "docker buildx build -f docker/alpine-base.dockerfile --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:base-alpine . --push",
         "build-docker-debian-base": "docker buildx build -f docker/debian-base.dockerfile --platform linux/amd64,linux/arm64,linux/arm/v7 -t louislam/uptime-kuma:base-debian . --push",
