--- a/.github/workflows/container_build.yml
+++ b/.github/workflows/container_build.yml
@@ -6,10 +6,10 @@ name: Build and deploy containers
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
   pull_request:
     branches:
-      - main
+      - master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -41,7 +41,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
-            type=raw,value=latest,enable=${{ endsWith(github.ref, 'main') }}
+            type=raw,value=latest,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
