--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
         "@popperjs/core": "~2.10.2",
         "args-parser": "~1.3.0",
         "axios": "~0.21.4",
-        "babel-plugin-rewire": "~1.2.0",
         "bcryptjs": "~2.4.3",
         "bootstrap": "~5.1.1",
+        "chardet": "^1.3.0",
         "chart.js": "~3.5.1",
         "chartjs-adapter-dayjs": "~1.0.0",
         "command-exists": "~1.2.9",
@@ -72,6 +72,7 @@
         "express-basic-auth": "~1.2.0",
         "form-data": "~4.0.0",
         "http-graceful-shutdown": "~3.1.4",
+        "iconv-lite": "^0.6.3",
         "jsonwebtoken": "~8.5.1",
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
@@ -108,6 +109,7 @@
         "@vitejs/plugin-legacy": "~1.6.1",
         "@vitejs/plugin-vue": "~1.9.2",
         "@vue/compiler-sfc": "~3.2.19",
+        "babel-plugin-rewire": "~1.2.0",
         "core-js": "~3.18.1",
         "cross-env": "~7.0.3",
         "dns2": "~2.0.1",
