--- a/package.json
+++ b/package.json
@@ -62,8 +62,8 @@
         "axios": "~0.21.4",
         "bcryptjs": "~2.4.3",
         "bootstrap": "~5.1.1",
-        "chardet": "^1.3.0",
         "bree": "~6.3.1",
+        "chardet": "^1.3.0",
         "chart.js": "~3.5.1",
         "chartjs-adapter-dayjs": "~1.0.0",
         "command-exists": "~1.2.9",
@@ -71,6 +71,7 @@
         "dayjs": "~1.10.7",
         "express": "~4.17.1",
         "express-basic-auth": "~1.2.0",
+        "favico.js": "^0.3.10",
         "form-data": "~4.0.0",
         "http-graceful-shutdown": "~3.1.4",
         "iconv-lite": "^0.6.3",
