[upload artifacts] no idea why suddenly not working via env var, hardcode the VERSION instead

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -34,7 +34,7 @@ RUN apt update && \
 ARG GITHUB_TOKEN
 ARG TARGETARCH
 ARG PLATFORM=debian
-ARG VERSION
+ARG VERSION=1.9.0
 ARG FILE=$PLATFORM-$TARGETARCH-$VERSION.tar.gz
 ARG DIST=dist.tar.gz
 
