--- a/package.json
+++ b/package.json
@@ -62,10 +62,11 @@
         "axios": "~0.21.4",
         "bcryptjs": "~2.4.3",
         "bootstrap": "~5.1.1",
-        "chardet": "^1.3.0",
         "bree": "~6.3.1",
+        "chardet": "^1.3.0",
         "chart.js": "~3.5.1",
         "chartjs-adapter-dayjs": "~1.0.0",
+        "check-password-strength": "^2.0.3",
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
         "dayjs": "~1.10.7",
