--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "http-graceful-shutdown": "~3.1.4",
         "iconv-lite": "^0.6.3",
         "jsonwebtoken": "~8.5.1",
+        "limiter": "^2.1.0",
         "nodemailer": "~6.6.5",
         "notp": "~2.0.3",
         "password-hash": "~1.2.2",
