Fix name for docker_compose ansible module
to make it working with newer ansible

--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -29,7 +29,7 @@
     dest: /compose/volumes/nginx/nginx.conf
 
 - name: Ensure uptime-kuma is up
-  docker_compose:
+  community.docker.docker_compose:
     state: present
     project_src: /compose/kuma
     pull: no
