using variables for domain and guid to run added to readme

--- a/ansible/roles/nginx/templates/nginx.conf
+++ b/ansible/roles/nginx/templates/nginx.conf
@@ -20,8 +20,8 @@ http {
 
     ### SSL Settings for all servers (https://ssl-config.mozilla.org/#server=nginx&server-version=1.17.2&config=intermediate)
     # certs sent to the client in SERVER HELLO are concatenated in ssl_certificate
-    ssl_certificate     /etc/nginx/ssl/status.yoursite.fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/status.yoursite.privkey.pem;
+    ssl_certificate     /etc/nginx/ssl/{{ kuma_domain }}.fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/{{ kuma_domain }}.privkey.pem;
     ssl_session_timeout 1d;
     ssl_session_cache shared:MozSSL:10m;  # about 40000 sessions
     ssl_session_tickets off;
@@ -59,12 +59,12 @@ http {
     # Redirect HTTP request to HTTPS
     server {
       listen              80 default_server;
-      server_name         status.yoursite;
+      server_name         {{ kuma_domain }};
       return 302 https://$host$request_uri;
     }
 
     server {
-        server_name     status.yoursite;
+        server_name     {{ kuma_domain }};
         listen          443 ssl http2 default_server;
 
         access_log      /var/log/nginx/yoursite.access.log main;
