--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,6 +1,6 @@
 name: "🐛 Bug Report"
 description: "Submit a bug report to help us improve"
-title: "🐛 Bug Report: "
+title: "[Bug]: "
 labels: [bug]
 body:
   - type: markdown
