--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,4 +1,4 @@
-name: 🚀 Feature
+name: 🚀 Feature Request
 description: "Submit a proposal for a new feature"
 title: "[Feature]: "
 labels: [enhancement]
