--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -3,10 +3,6 @@ description: "Submit a bug report to help us improve"
 title: "[Bug]: <title>"
 labels: [bug]
 body:
-  - type: markdown
-    attributes:
-      value: |
-        Thanks for taking the time to fill out this bug report!
   - type: textarea
     id: steps-to-reproduce
     validations:
@@ -53,17 +49,24 @@ body:
     validations:
       required: true
   - type: input
-    id: docker-tag
+    id: docker-version
     attributes:
       label: "🐋 Docker"
-      description: "Currently running with Docker? Which image tag are you using?"
+      description: "If running with Docker, which version are you running?"
+    validations:
+      required: false
+  - type: input
+    id: docker-image-tag
+    attributes:
+      label: "🏷️ Docker Image Tag"
+      description: "Which Docker image tag are you using? If running '1' or 'latest', please specify image hash."
     validations:
       required: false
   - type: input
     id: nodejs-version
     attributes:
       label: "🟩 NodeJS Version"
-      description: "Currently running with Node.js? which version of node.js are you running?"
+      description: "If running with Node.js? which version are you running?"
     validations:
       required: false
   - type: textarea
