Add http and https agents

--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
         "express-basic-auth": "~1.2.0",
         "form-data": "~4.0.0",
         "http-graceful-shutdown": "~3.1.5",
+        "http-proxy-agent": "^5.0.0",
+        "https-proxy-agent": "^5.0.0",
         "iconv-lite": "^0.6.3",
         "jsonwebtoken": "~8.5.1",
         "jwt-decode": "^3.1.2",
