--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,8 +1,31 @@
 name: "🐛 Bug Report"
 description: "Submit a bug report to help us improve"
-title: "[Bug]: <title>"
+title: "[Bug] "
 labels: [bug]
 body:
+  - type: checkboxes
+    id: no-duplicate-issues
+    attributes:
+      label: "⚠️ Please verify that this bug has NOT been raised before."
+      description: "Search in the issues sections by clicking [HERE](https://github.com/louislam/uptime-kuma/issues?q=)"
+      options:
+        - label: "I checked and didn't find similar issue"
+          required: true
+  - type: checkboxes
+    attributes:
+      label: "🛡️ Security Policy"
+      description: Please review the security policy before reporting security related issues/bugs.
+      options:
+        - label: I agree to have read this project [Security Policy](https://github.com/louislam/uptime-kuma/security/policy)
+          required: true
+  - type: textarea
+    id: description
+    validations:
+      required: false
+    attributes:
+      label: "Description"
+      description: "You could also upload screenshots"
+      placeholder: ""
   - type: textarea
     id: steps-to-reproduce
     validations:
@@ -31,8 +54,8 @@ body:
     id: uptime-kuma-version
     attributes:
       label: "🐻 Uptime-Kuma Version"
-      description: "Which version of Uptime-Kuma are you running?"
-      placeholder: "Ex. 1.9.x"
+      description: "Which version of Uptime-Kuma are you running? Please do NOT provide the docker tag such as latest or 1"
+      placeholder: "Ex. 1.10.0"
     validations:
       required: true
   - type: input
@@ -48,7 +71,7 @@ body:
     attributes:
       label: "🌐 Browser"
       description: "Which browser are you running on?"
-      placeholder: "Ex. Firefox"
+      placeholder: "Ex. Google Chrome 95.0.4638.69"
     validations:
       required: true
   - type: input
@@ -56,7 +79,7 @@ body:
     attributes:
       label: "🐋 Docker Version"
       description: "If running with Docker, which version are you running?"
-      placeholder: "Ex. 20.10.9 / K8S / Podman"
+      placeholder: "Ex. Docker 20.10.9 / K8S / Podman"
     validations:
       required: false
   - type: input
@@ -74,19 +97,4 @@ body:
       description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
       render: shell
     validations:
-      required: false 
-  - type: checkboxes
-    id: no-duplicate-issues
-    attributes:
-      label: "⚠️ Please verify that this bug has NOT been raised before."
-      description: "Search in the issues sections by clicking [HERE](https://github.com/louislam/uptime-kuma/issues?q=)"
-      options:
-        - label: "I checked and didn't find similar issue"
-          required: true
-  - type: checkboxes
-    attributes:
-      label: "🛡️ Security Policy"
-      description: Please review the security policy before reporting security related issues/bugs.
-      options:
-        - label: I agree to have read this project [Security Policy](https://github.com/louislam/uptime-kuma/security/policy)
-          required: true
+      required: false
