--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "args-parser": "~1.3.0",
         "axios": "~0.21.4",
         "bcryptjs": "~2.4.3",
-        "bootstrap": "~5.1.3",
+        "bootstrap": "5.1.3",
         "bree": "~6.3.1",
         "chardet": "^1.3.0",
         "chart.js": "~3.6.0",
