Add socks proxy agent

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
         "redbean-node": "0.1.3",
         "socket.io": "~4.4.1",
         "socket.io-client": "~4.4.1",
+        "socks-proxy-agent": "^6.1.0",
         "tar": "^6.1.11",
         "tcp-ping": "~0.1.1",
         "thirty-two": "~1.0.2",
