--- a/ansible/roles/nginx/templates/nginx.conf
+++ b/ansible/roles/nginx/templates/nginx.conf
@@ -67,8 +67,8 @@ http {
         server_name     {{ kuma_domain }};
         listen          443 ssl http2 default_server;
 
-        access_log      /var/log/nginx/yoursite.access.log main;
-        error_log       /var/log/nginx/yoursite.error.log;
+        access_log      /var/log/nginx/{{ kuma_domain }}.access.log main;
+        error_log       /var/log/nginx/{{ kuma_domain }}.error.log;
 
         location / {
             # rewrite ^/(.*)/$ /$1 permanent;
@@ -79,7 +79,7 @@ http {
             # }
 	        proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass         http://localhost:3001/;
+            proxy_pass         http://uptime-kuma:3001/;
             proxy_http_version 1.1;
             proxy_set_header   Upgrade $http_upgrade;
             proxy_set_header   Connection "upgrade";
