--- a/.github/ISSUE_TEMPLATE/feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yaml
@@ -1,7 +1,7 @@
 name: 🚀 Feature Request
 description: "Submit a proposal for a new feature"
 #title: "[Feature] "
-labels: [enhancement]
+labels: [feature-request]
 body:
   - type: checkboxes
     id: no-duplicate-issues
